--- a/app/static/ui/style.css
+++ b/app/static/ui/style.css
@@ -245,42 +245,46 @@ header h1 {
     font-size: 1em;
 }
 
+.results-container {
+  grid-column: 2 / 2;
+  grid-row: 2 / 4;
+  align-self: start;
+  background-color: var(--surface-color);
+  padding: 1.5em;
+  border-radius: var(--border-radius);
+  border: 1px solid var(--border-color);
+  box-shadow: var(--box-shadow);
+  overflow-y: auto;
+  position: relative;
+  min-height: 200px;
+  height: calc(100vh - var(--page-vertical-padding-calc) - var(--footer-height-calc) - 1em - (var(--input-height) + 1.5em + 1.5em) );
+}
+
 .search-progress {
-    grid-column: 2 / 2;
-    grid-row: 1 / 4;
-    align-self: start;
-    margin-top: 0;
-    text-align: center;
-    height: 24px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: none;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(var(--surface-color-rgb, 44, 44, 46), 0.5);
+  z-index: 10;
 }
 
 .loader {
-    border: 3px solid rgba(235,235,245, 0.15);
-    border-top: 3px solid var(--loader-active-color);
-    border-radius: 50%;
-    width: 24px;
-    height: 24px;
-    animation: spin 0.8s linear infinite;
-    margin: 0 auto;
-    display: none;
+  border: 3px solid rgba(235,235,245, 0.15);
+  border-top: 3px solid var(--loader-active-color);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  animation: spin 0.8s linear infinite;
 }
 
 @keyframes spin {
-    0% { transform: rotate(0deg); }
-    100% { transform: rotate(360deg); }
-}
-
-.results-container {
-    grid-column: 2 / 2;
-    grid-row: 2 / 4;
-    align-self: start;
-    background-color: var(--surface-color);
-    padding: 1.5em;
-    border-radius: var(--border-radius);
-    border: 1px solid var(--border-color);
-    box-shadow: var(--box-shadow);
-    overflow-y: auto;
-    height: calc(100vh - var(--page-vertical-padding-calc) - var(--footer-height-calc) - 1em - var(--search-form-total-height-calc) - var(--search-progress-total-height-calc));
+  0% {transform: rotate(0deg);}
+  100% {transform: rotate(360deg);}
 }
 
 .results-container h3 {
