--- a/app/static/ui/style.css
+++ b/app/static/ui/style.css
@@ -194,7 +194,7 @@ header h1 {
     display: flex;
     align-items: center;
     width: 100%;
-    background-color: var(--surface-color);
+    background-color: var(--bg-color);
     gap: 0.5em;
 }
 
@@ -216,7 +216,7 @@ header h1 {
 }
 
 .search-form input[type="text"]:focus {
-    background-color: var(--surface-color);
+    background-color: var(--bg-color);
     border-color: var(--search-focus-border-grey);
     box-shadow: var(--search-focus-subtle-shadow);
 }
@@ -224,8 +224,6 @@ header h1 {
 .topk-label {
     color: var(--text-secondary-color);
     font-size: 1em;
-    margin-right: 0.5em;
-    margin-left: 0.5em;
     white-space: nowrap;
 }
 
@@ -233,6 +231,7 @@ header h1 {
     position: relative;
     display: flex;
     align-items: center;
+    gap: 0.45em;
 }
 
 #topK {
@@ -241,7 +240,7 @@ header h1 {
     border: 1px solid var(--border-color);
     border-radius: var(--border-radius);
     background-color: var(--input-bg-color);
-    font-size: 1em;
+    font-size: 0.9em;
     padding: 0 2.2em 0 1em;
     cursor: pointer;
     outline: none;
@@ -268,6 +267,42 @@ header h1 {
 }
 
 #topK:invalid {
+    color: var(--text-secondary-color);
+}
+
+#sourceSelect {
+    height: var(--input-height);
+    width: 95px;
+    border: 1px solid var(--border-color);
+    border-radius: var(--border-radius);
+    background-color: var(--input-bg-color);
+    font-size: 0.9em;
+    padding: 0 2.2em 0 1em;
+    cursor: pointer;
+    outline: none;
+    text-wrap: wrap;
+    box-shadow: var(--box-shadow);
+    transition: border-color 0.2s, background-color 0.2s;
+    appearance: none;
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    text-align: center;
+    background-image: url('data:image/svg+xml;utf8,<svg fill="gray" height="16" viewBox="0 0 20 20" width="16" xmlns="http://www.w3.org/2000/svg"><path d="M7 7l3 3 3-3" stroke="gray" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round"/></svg>');
+    background-repeat: no-repeat;
+    background-position: right 0.8em center;
+    background-size: 1em;
+}
+
+#sourceSelect option {
+    text-align: center;
+}
+
+#sourceSelect option[disabled] {
+    color: var(--text-secondary-color);
+    display: none;
+}
+
+#sourceSelect:invalid {
     color: var(--text-secondary-color);
 }
 
